[tool.poetry]
name = "Promptior"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
sse-starlette = "^1.6.5"
tomli-w = "^1.0.0"
uvicorn = "^0.23.2"
fastapi = ">=0.104.0"
langserve = {extras = ["server"], version = ">=0.0.30"}
agent_promptior = {path="./packages/agent_promptior", develop=true}

[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
